Fix long channel names issue on firefox
Fixes #127

--- a/src/components/Chat/Chat.styl
+++ b/src/components/Chat/Chat.styl
@@ -42,7 +42,7 @@ channel-width=12rem;
         flex-basis: channel-width;
         flex-shrink: 0;
         flex-grow: 0;
-        width: 12rem;
+        width: channel-width;
         //overflow-y: scroll;
 
         border-right: 1px solid transparent;
@@ -53,13 +53,15 @@ channel-width=12rem;
     }
     .all-channels {
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         height: "calc(100vh - %s - %s)" % (navbar-height channel-utils-height);
         overflow-y: auto;
+        width: channel-width;
     }
     .channels {
         flex-grow: 0;
-        flex-shrink: 1;
+        flex-shrink: 0;
+        overflow-x: hidden;
   
         .channel-header {
             margin-top: 1.0rem;
